appId: uz.m19barbershop.app
---
- launchApp
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    text: "Записаться"
- waitForAnimationToEnd:
    timeout: 3000
- assertVisible: "Что вас интересует?"
- assertVisible: "Стрижка"
- assertVisible: "Коррекция бороды"